--- a/packages/template-nuxt/package.json
+++ b/packages/template-nuxt/package.json
@@ -14,6 +14,7 @@
     "email": "0x142857@gmail.com"
   },
   "dependencies": {
+    "glob": "^7.1.2",
     "superb": "^1.3.0"
   },
   "devDependencies": {
