--- a/packages/template-nuxt/template/package.json
+++ b/packages/template-nuxt/template/package.json
@@ -8,18 +8,29 @@
     "dev": "<% if (server === 'none') { %>nuxt<% } else { %>cross-env NODE_ENV=development nodemon server/index.js --watch server<% } %>",
     "build": "nuxt build",
     "start": "<% if (server === 'none') { %>nuxt start<% } else { %>cross-env NODE_ENV=production node server/index.js<% } %>",
-    "generate": "nuxt generate",
+    "generate": "nuxt generate"<% if (eslint === 'yes') { %>,
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint"<% } %>
   },
   "dependencies": {
     "es6-promise": "^4.1.1",
-    "nuxt": "^1.0.0-rc3"<% if (server === 'express') { %>,
+    "nuxt": "^1.0.0-rc11"<% if (server === 'express') { %>,
     "express": "^4.15.3"<% } else if (server === 'koa') { %>,
-    "koa": "^2.3.0"<% } %><% if (server !== 'none') { %>,
-    "cross-env": "^5.0.1"<% } %>
+    "koa": "^2.3.0"<% } else if (server === 'hapi') { %>,
+    "hapi-nuxt": "^0.6.0"<% } else if (server === 'micro') { %>,
+    "micro": "^9.0.0",
+    "micro-route": "^2.4.0"<% } else if (server === 'feathers') { %>,
+    "feathers": "^2.0.3",
+    "feathers-configuration": "^0.3.3"<% } %><% if (ui === 'bootstrap') { %>,
+    "bootstrap-vue": "^1.0.2",
+    "bootstrap": "^4.0.0-beta.2"<% } else if (ui === 'vuetify') { %>,
+    "vuetify": "^0.16.9"<% } else if (ui === 'bulma') { %>,
+    "@nuxtjs/bulma": "^1.0.3"<% } else if (ui === 'element-ui') { %>,
+    "element-ui": "^1.4.9"<% } %><% if (axios === 'yes') { %>,
+    "@nuxtjs/axios": "^4.4.0"<% } %>
   },
   "devDependencies": {
+    "cross-env": "^5.0.1"<% if (eslint === 'yes') { %>,
     "babel-eslint": "^7.2.3",
     "eslint": "^4.3.0",
     "eslint-config-standard": "^10.2.1",
@@ -27,7 +38,9 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1"<% if (server !== 'none') { %>,
+    "eslint-plugin-standard": "^3.0.1"<% } %><% if (ui === 'tailwind') { %>,
+    "autoprefixer": "^7.1.6",
+    "tailwindcss": "^0.1.3"<% } %><% if (server !== 'none') { %>,
     "nodemon": "^1.11.0"<% } %>
   }
 }
