--- a/template/.editorconfig
+++ b/template/.editorconfig
@@ -2,12 +2,13 @@
 root = true
 
 [*]
+indent_style = tab
 indent_size = 2
-indent_style = space
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.md]
-trim_trailing_whitespace = false
+[{package.json,*.yml,*.md}]
+indent_style = space
+indent_size = 2
