feat: add rendering mode (#10)
* refactor: reconcile editorconfig with nuxt

* feat: add rendering mode

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "authors": [
     "Egoist <0x142857@gmail.com>",
     "Nuxt team <team@nuxtjs.org>",
-    "Clark Du"
+    "Clark Du <clark.duxin@gmail.com>"
   ],
   "license": "MIT"
 }
