--- a/.editorconfig
+++ b/.editorconfig
@@ -1,13 +1,12 @@
 root = true
 
 [*]
-indent_style = tab
+indent_style = space
 indent_size = 2
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[{package.json,*.yml,*.md}]
-indent_style = space
-indent_size = 2
+[*.md]
+trim_trailing_whitespace = false
