Fixing additional prettier errors (#100)
* fix default linting errors when enabling prettier option

* fix centering issue for tailwind option, fix vuetify styles for prettier option

* fix additional prettier errors for tailwind, buefy and vuetify

* fixes all prettier errors

* update ava snapshot, add command for creating a snapshot

* remove eslint-disable for vue/no-v-html parts

* Update package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "create-nuxt-app",
   "version": "2.1.1",
-  "description": "Create Nuxt.js App in seconds.",
+  "description": "Create a Nuxt.js App in seconds.",
   "bin": "cli.js",
   "files": [
     "cli.js",
@@ -13,7 +13,8 @@
     "type": "git"
   },
   "scripts": {
-    "test": "ava --verbose"
+    "test": "ava --verbose",
+    "test:snapshot": "ava --verbose --update-snapshots"
   },
   "dependencies": {
     "lodash": "^4.17.4",
