fix some linting errors in nuxt.config and server files (#125)
run lint --fix as last step of create new project

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test:snapshot": "ava --verbose --update-snapshots"
   },
   "dependencies": {
+    "cross-spawn": "^6.0.5",
     "lodash": "^4.17.4",
     "minimist": "^1.2.0",
     "sao": "^0.22.5",
