feat: validate package name (#150)

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lodash": "^4.17.4",
     "minimist": "^1.2.0",
     "sao": "^0.22.5",
-    "superb": "^2.0.0"
+    "superb": "^2.0.0",
+    "validate-npm-package-name": "^3.0.0"
   },
   "devDependencies": {
     "ava": "^0.23.0"
