--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "cross-spawn": "^6.0.5",
+    "glob": "^7.1.3",
     "lodash": "^4.17.4",
     "minimist": "^1.2.0",
     "sao": "^0.22.5",
