--- a/package.json
+++ b/package.json
@@ -13,20 +13,29 @@
     "type": "git"
   },
   "scripts": {
+    "lint": "eslint ./",
     "test": "ava --verbose",
     "test:snapshot": "ava --verbose --update-snapshots"
   },
   "dependencies": {
     "cross-spawn": "^6.0.5",
     "glob": "^7.1.3",
-    "lodash": "^4.17.4",
-    "minimist": "^1.2.0",
-    "sao": "^0.22.5",
+    "lodash": "^4.17.11",
+    "sao": "^1.6.1",
     "superb": "^2.0.0",
     "validate-npm-package-name": "^3.0.0"
   },
   "devDependencies": {
-    "ava": "^0.23.0"
+    "@nuxtjs/eslint-config": "^0.0.1",
+    "ava": "^1.2.1",
+    "eslint": "^5.13.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jest": "^22.2.2",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^5.1.0"
   },
   "authors": [
     "Egoist <0x142857@gmail.com>",
