--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "scripts": {
     "lint": "eslint ./",
     "test": "ava --verbose",
-    "test:snapshot": "ava --verbose --update-snapshots"
+    "test:snapshot": "ava --verbose --update-snapshots",
+    "release": "standard-version"
   },
   "dependencies": {
     "cross-spawn": "^6.0.5",
@@ -35,7 +36,8 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^5.1.0"
+    "eslint-plugin-vue": "^5.1.0",
+    "standard-version": "^5.0.1"
   },
   "authors": [
     "Egoist <0x142857@gmail.com>",
