--- a/.eslintignore
+++ b/.eslintignore
@@ -1,3 +1,3 @@
 _*.js
-template/nuxt/pages/index.vue',
-template/frameworks/iview/pages/index.vue'
+template/nuxt/pages/index.vue
+template/frameworks/iview/pages/index.vue
