--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "release": "standard-version"
   },
   "dependencies": {
+    "cac": "^6.5.2",
     "chalk": "^2.4.2",
     "cross-spawn": "^6.0.5",
     "glob": "^7.1.3",
