--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cac": "^6.5.2",
     "chalk": "^2.4.2",
     "cross-spawn": "^6.0.5",
+    "envinfo": "^7.3.1",
     "glob": "^7.1.3",
     "lodash": "^4.17.11",
     "sao": "^1.6.1",
