--- a/.github/semantic.yml
+++ b/.github/semantic.yml
@@ -1,5 +1,2 @@
-# Always validate the PR title AND all the commits
-titleAndCommits: true
-# Disallows use of Merge commits (eg on github: "Merge branch 'master' into feature/ride-unicorns")
-# this is only relevant when using commitsOnly: true (or titleAndCommits: true)
-allowMergeCommits: false
+# Always validate the PR title
+titleOnly: true
