--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
-    "ava": "^2.4.0",
+    "@ava/babel": "^1.0.0",
+    "ava": "^3.0.0",
     "eslint": "^6.8.0",
     "standard-version": "^7.0.1"
   },
