feat: minimum required nodejs version is 10.20.0 BREAKING CHANGE

--- a/packages/create-nuxt-app/package.json
+++ b/packages/create-nuxt-app/package.json
@@ -22,5 +22,8 @@
     "Nuxt team <team@nuxtjs.org>",
     "Clark Du <clark.duxin@gmail.com>"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": ">=10.20.0"
+  }
 }
