--- a/packages/cna-template/template/nuxt/package.json
+++ b/packages/cna-template/template/nuxt/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "lint-staged": {
-    "*.{js,vue}": "<%= pmRun %> lint",
+    "*.{js,vue}": "eslint",
     "*.{css,vue}": "stylelint"
   },
   "husky": {
