feat: add WebdriverIO as test framework option (#528)
* add WebdriverIO as test framework option

* fix linter

* update snapshot

* update snapshot

* add wdio packages to renovate.json

Co-authored-by: christian-bromann <mail@christian-bromann.com>

--- a/renovate.json
+++ b/renovate.json
@@ -41,6 +41,10 @@
     {
       "packagePatterns": ["ava", "require-extension-hooks"],
       "groupName": "ava packages"
+    },
+    {
+      "packagePatterns": ["wdio", "webdriver"],
+      "groupName": "webdriverio packages"
     }
   ]
 }
