--- a/packages/cna-template/template/frameworks/jest/package.json
+++ b/packages/cna-template/template/frameworks/jest/package.json
@@ -4,9 +4,10 @@
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.33",
+    "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^25.5.1",
     "jest": "^25.5.2",
     "ts-jest": "^25.4.0",
-    "vue-jest": "^4.0.0-beta.2"
+    "vue-jest": "^3.0.4"
   }
 }
