--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,9 @@
   "lockFileMaintenance": {
     "enabled": true
   },
+  "ignoreDeps": [
+    "vue-jest"
+  ],
   "packageRules": [
     {
       "packagePatterns": ["nuxt"],
