--- a/packages/cna-template/template/nuxt/package.json
+++ b/packages/cna-template/template/nuxt/package.json
@@ -20,6 +20,7 @@
     "@nuxt/typescript-runtime": "^0.4.9",
     "@nuxtjs/axios": "^5.11.0",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "@nuxt/content": "^1.3.1",
     "nuxt": "^2.12.2"
   },
   "devDependencies": {
