feat: prepare for Nuxt 2.13 (#529)
* feat: prepare for Nuxt 2.13

* fix(jest): downgrate vue-jest to v3
pending by https://github.com/vuejs/vue-jest/issues/241

* chore(deps): update all non-major dependencies (#509)

* fix(prettier): add stylelint-config-prettier

* chore(deps): update jest packages (major) (#513)

* chore: add npm registry config

* chore(deps): update all non-major dependencies

* chore(deps): update devdependency @nuxt/typescript-build to v1

* fix(ava): expect vm truthy as vue instance assertion

* chore(deps): update all non-major dependencies

* chore(deps): update all non-major dependencies

* feat(template): remove dotenv module (#544)

* chore: optimize svg & animation (#547)

* feat: add content module (#540)

* chore(deps): update all non-major dependencies

* chore(deps): lock file maintenance (#541)

* v3.0.0

* chore: update snapshots

* chore: update prompts and add TS runtime by default

* chore: fix lint issue

Co-authored-by: Clark Du <clark.duxin@gmail.com>
Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Martijn Cuppens <martijn.cuppens@gmail.com>
Co-authored-by: Benjamin Canac <canacb1@gmail.com>
Co-authored-by: Pooya Parsa <pyapar@gmail.com>

--- a/packages/cna-template/template/nuxt/package.json
+++ b/packages/cna-template/template/nuxt/package.json
@@ -3,7 +3,8 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
+    "export": "nuxt export",
+    "serve": "nuxt serve",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore"
   },
