--- a/packages/cna-template/template/nuxt/package.json
+++ b/packages/cna-template/template/nuxt/package.json
@@ -13,6 +13,7 @@
   },
   "husky": {
     "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "pre-commit": "lint-staged"
     }
   },
@@ -25,6 +26,8 @@
     "nuxt": "^2.14.0"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^9.1.2",
+    "@commitlint/cli": "^9.1.2",
     "@nuxt/types": "^2.14.0",
     "@nuxt/typescript-build": "^2.0.3",
     "@nuxtjs/eslint-config": "^3.1.0",
