--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  ci:
+  snapshots:
     runs-on: ubuntu-latest
 
     steps:
@@ -15,7 +15,7 @@ jobs:
           node-version: ${{ matrix.node }}
 
       - name: checkout
-        uses: actions/checkout@2
+        uses: actions/checkout@master
 
       - name: cache node_modules
         uses: actions/cache@v1
