--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -22,6 +22,10 @@ jobs:
         with:
           path: node_modules
           key: deps-${{ hashFiles(format('{0}{1}', github.workspace, '/yarn.lock')) }}
+          
+      - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: yarn --frozen-lockfile --non-interactive
 
       - name: test with update-snapshots
         run: yarn ava --verbose --update-snapshots
