--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -28,7 +28,7 @@ jobs:
         run: yarn --frozen-lockfile --non-interactive
 
       - name: test with update-snapshots
-        run: yarn ava --verbose --update-snapshots
+        run: AVA_FORCE_CI="not-ci" yarn ava --verbose --update-snapshots
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
