--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -37,4 +37,4 @@ jobs:
           commit_message: "test: update snapshots"
           file_pattern: "*.snap *.md"
         env:
-          INPUT_BRANCH: "master
+          INPUT_BRANCH: "master"
