--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -1,9 +1,6 @@
 name: snapshots
 
-on:
-  push:
-    branches:
-      - master
+on: [pull_request, pull_request_target]
 
 jobs:
   snapshots:
@@ -17,6 +14,8 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
 
       - name: Cache node_modules
         uses: actions/cache@v1
@@ -36,5 +35,3 @@ jobs:
         with:
           commit_message: "test: update snapshots"
           file_pattern: "*.snap *.md"
-        env:
-          INPUT_BRANCH: "master"
