--- a/packages/cna-template/template/dependabot.yml
+++ b/packages/cna-template/template/dependabot.yml
@@ -1,18 +1,34 @@
 version: 2
 updates:
+# Fetch and update latest `npm` packages
 - package-ecosystem: npm
-  directory: "/"
+  directory: '/'
   schedule:
     interval: daily
     time: '00:00'
-  open-pull-requests-limit: 99
+  open-pull-requests-limit: 10
   reviewers:
     - <%= gitUsername %>
   assignees:
     - <%= gitUsername %>
-  labels:
-    - dependencies
   commit-message:
     prefix: fix
     prefix-development: chore
     include: scope
+<%_ if (ci === 'github-actions') { _%>
+# Fetch and update latest `github-actions` pkgs
+- package-ecosystem: github-actions
+  directory: '/'
+  schedule:
+    interval: daily
+    time: '00:00'
+  open-pull-requests-limit: 10
+  reviewers:
+    - <%= gitUsername %>
+  assignees:
+    - <%= gitUsername %>
+  commit-message:
+    prefix: fix
+    prefix-development: chore
+    include: scope
+<%_ } _%>
