--- a/renovate.json
+++ b/renovate.json
@@ -57,6 +57,10 @@
     {
       "packagePatterns": ["wdio", "webdriver"],
       "groupName": "webdriverio packages"
+    },
+    {
+      "packagePatterns": ["oruga"],
+      "groupName": "oruga packages"
     }
   ]
 }
