feat: add Nightwatch.js as test framework option (#572)

--- a/renovate.json
+++ b/renovate.json
@@ -61,6 +61,10 @@
     {
       "packagePatterns": ["oruga"],
       "groupName": "oruga packages"
+    },
+    {
+      "packagePatterns": ["nightwatch", "chromedriver"],
+      "groupName": "nightwatch packages"
     }
   ]
 }
