--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -5,7 +5,7 @@ on: [pull_request, pull_request_target]
 jobs:
   snapshots:
     runs-on: ubuntu-latest
-    if: ${{ contains(github.actor, 'renovate') }}
+    if: ${{ github.actor == 'renovate' }}
 
     steps:
       - name: Setup node
