--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -5,7 +5,7 @@ on: [pull_request, pull_request_target]
 jobs:
   snapshots:
     runs-on: ubuntu-latest
-    if: ${{ github.actor == 'renovate-bot' }}
+    if: ${{ github.actor == 'renovate[bot]' }}
 
     steps:
       - name: Setup node
