fix(types): add nuxt content support for typescript (#688)

--- a/packages/cna-template/template/tsconfig.json
+++ b/packages/cna-template/template/tsconfig.json
@@ -24,8 +24,11 @@
       ]
     },
     "types": [
-      "@types/node",
-      "@nuxt/types"
+      "@nuxt/types",
+      <%_ if (content) { _%>
+      "@nuxt/content",
+      <%_ } _%>
+      "@types/node"
     ]
   },
   "exclude": [
