fix(types): include @nuxtjs/axios types (#691)

--- a/packages/cna-template/template/tsconfig.json
+++ b/packages/cna-template/template/tsconfig.json
@@ -25,6 +25,9 @@
     },
     "types": [
       "@nuxt/types",
+      <%_ if (axios) { _%>
+      "@nuxtjs/axios",
+      <%_ } _%>
       <%_ if (content) { _%>
       "@nuxt/content",
       <%_ } _%>
