--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "packages/*"
   ],
   "repository": {
-    "url": "git+https://github.com/nuxt/create-nuxt-app.git",
+    "url": "https://github.com/nuxt/create-nuxt-app.git",
     "type": "git"
   },
   "scripts": {
