chore: add homepage for create-nuxt-app

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "workspaces": [
     "packages/*"
   ],
+  "homepage": "https://github.com/nuxt/create-nuxt-app#readme",
   "repository": {
     "url": "https://github.com/nuxt/create-nuxt-app.git",
     "type": "git"
