--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint:js": "eslint --ext \".js,.mjs,.vue\" .",
     "lint:style": "stylelint \"**/*.{vue,css}\"",
     "test": "ava --verbose",
-    "test:snapshot": "ava --verbose --update-snapshots"
+    "test:snapshot": "ava --verbose --update-snapshots",
+    "postinstall": "husky install"
   },
   "devDependencies": {
     "@ava/babel": "^1.0.1",
@@ -23,7 +24,7 @@
     "@nuxtjs/eslint-config": "^5.0.0",
     "ava": "^3.15.0",
     "eslint": "^7.18.0",
-    "husky": "^4.3.8",
+    "husky": "^5.0.9",
     "lerna": "^3.22.1",
     "stylelint": "^13.9.0",
     "stylelint-config-standard": "^20.0.0"
