fix(vuesax): add boxicons (#722)

--- a/renovate.json
+++ b/renovate.json
@@ -60,6 +60,10 @@
     {
       "packagePatterns": ["nightwatch", "chromedriver"],
       "groupName": "nightwatch packages"
+    },
+    {
+      "packagePatterns": ["boxicons", "vuesax"],
+      "groupName": "vuesax packages"
     }
   ]
 }
