--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -33,6 +33,8 @@ jobs:
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4.8.0
+        env:
+          HUSKY: 0
         with:
           commit_message: "test: update snapshots"
           file_pattern: "**/*.snap **/*.md"
