chore(ci): checks if the cached version is the latest one

--- a/packages/cna-template/template/frameworks/github-actions/.github/workflows/ci.yml
+++ b/packages/cna-template/template/frameworks/github-actions/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
         uses: actions/setup-node@v2.1.2
         with:
           node-version: ${{ matrix.node }}
+          check-latest: true
 
       <%_ if (pm === 'yarn') { _%>
       - name: Get yarn cache directory path 🛠
