fix: Oruga packagePatterns in renovate.json (#734)

--- a/renovate.json
+++ b/renovate.json
@@ -54,7 +54,7 @@
       "groupName": "webdriverio packages"
     },
     {
-      "packagePatterns": ["oruga"],
+      "packagePatterns": ["@oruga-ui"],
       "groupName": "oruga packages"
     },
     {
