feat: update @nuxtjs/tailwindcss to v4 (#751)

--- a/packages/cna-template/template/frameworks/tailwind/package.json
+++ b/packages/cna-template/template/frameworks/tailwind/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^3.4.3"
+    "@nuxtjs/tailwindcss": "^4.0.1",
+    "postcss": "^8.2.8"
   }
 }
