--- a/packages/cna-template/template/frameworks/github-actions/.github/workflows/ci.yml
+++ b/packages/cna-template/template/frameworks/github-actions/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/checkout@master
 
       - name: Setup node env 🏗
-        uses: actions/setup-node@v2.1.2
+        uses: actions/setup-node@v2.1.5
         with:
           node-version: ${{ matrix.node }}
           check-latest: true
@@ -35,7 +35,7 @@ jobs:
         run: echo "::set-output name=dir::$(yarn cache dir)"
 
       - name: Cache node_modules 📦
-        uses: actions/cache@v2
+        uses: actions/cache@v2.1.4
         id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
@@ -45,7 +45,7 @@ jobs:
       <%_ } _%>
       <%_ if (pm === 'npm') { _%>
       - name: Cache node_modules 📦
-        uses: actions/cache@v2
+        uses: actions/cache@v2.1.4
         with:
           path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
@@ -54,7 +54,7 @@ jobs:
       <%_ } _%>
 
       - name: Install dependencies 👨🏻‍💻
-        run: <%= pmRun === 'yarn' ? 'yarn' : 'npm ci' %>
+        run: <%= pmRun === 'yarn' ? 'yarn' : 'npm ci --prefer-offline --no-audit' %>
 
       <%_ if (linter.length > 0) { _%>
       - name: Run linter 👀
