--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   ci:
     runs-on: ${{ matrix.os }}
+    if: ${{ github.event_name != 'pull_request' || github.actor != 'renovate[bot]' }}
 
     strategy:
       matrix:
